Issue #12 - btn-action-secondary should have z-index

--- a/src/scss/lexicon-base/_buttons.scss
+++ b/src/scss/lexicon-base/_buttons.scss
@@ -1,7 +1,7 @@
 // Action Buttons
 
 .btn-action,
-.btn-action-secondary .btn {
+.btn-action-secondary {
 	z-index: $zindex-dropdown;
 }
 
